@@ -1,3 +1,4 @@
 .build/
 *.swp
+*.bak
 Log-Log4perl-Layout-JSON-*
