@@ -1,23 +1,12 @@
 name             = Log-Log4perl-Layout-JSON
-author           = Tim Bunce <Tim.Bunce@pobox.com>
+author           = Michael Schout <mschout@cpan.org>
 license          = Perl_5
-copyright_holder = Tim Bunce
-version          = 0.002003
 
-[NextRelease]
-[@Git]
-[@Basic]
-[CheckChangesHasContent]
-[GithubMeta]
-issues = 1
+[@MSCHOUT]
+-remove = Git::Tag
+use_twitter = 1
 
-[MetaJSON]
-[PodWeaver]
-[PkgVersion]
-[ReadmeFromPod]
-[PodSyntaxTests]
-
-[Prereqs::FromCPANfile]
+;[ReadmeFromPod]
 
 [Git::Tag]
 tag_format  = v%v%t
