@@ -2,6 +2,8 @@ Changes file for Log::Log4perl::Layout::JSON
 
 {{$NEXT}}
 
+  - new mainteiner: Michael Schout
+
 0.002003  2014-11-20 16:27:06+00:00 Europe/Dublin
 
   - Append a newline to the output, so it can be used with file appenders etc.
